# heartpy-enhanced-cpp

./: .cursorrules  .gitignore  A.md  CAMERA_PPG_FEATURE_IMPLEMENTATION.md  CMakeLists.txt  CRITICAL_REVIEW_V4.md  Critical_Solutions.md  DEPLOYMENT_SUCCESS.md  Final_Test_Summary.md  GEMINI.md  HeartPy_Enhanced_Documentation.md  Improvement_Priority_List.md  README.md  RN_INTEGRATION_REVIEW.md  RN_INTEGRATION_REVIEW_V2.md  RN_JSI_PLAN_REVIEW.md  SIGNAL_OPTIMIZATION_GUIDE.md  SNR_OPTIMIZATION_GUIDE.md  STREAMING_CODE_REVIEW.md  package-lock.json
.github/workflows/: android-benchmark.yml  ci.yml  rn-package.yml
.venv_val/: pyvenv.cfg
HeartPy-Master-Backup-20250913-204053/: README.md  restore_scripts.sh
HeartPy-Master-Backup-20250913-204053/HeartPyApp-Backup-2025-01-18/2025-01-18_cleanup/: bundle_fix.sh  package.json
HeartPy-Master-Backup-20250913-204053/HeartPyApp-Backup-2025-01-18/2025-01-18_cleanup/__tests__/: PPGEngine.test.ts
HeartPy-Master-Backup-20250913-204053/HeartPyApp-Backup-2025-01-18/2025-01-18_cleanup/testing/: FakeHeartPyWrapper.ts  README.md  useFixturePlayer.ts
HeartPy-Master-Backup-20250913-204053/HeartPyApp-Backup-2025-01-18/2025-01-18_cleanup/testing/fixtures/: mock_ppg_session.json
HeartPy-Master-Backup-20250913-204053/backups/backup-20250913-201909/: heartpy_core.cpp
HeartPy-Master-Backup-20250913-204053/backups/pre-symlink-backup-20250913-203447/: heartpy_stream.cpp  rn_options_builder.cpp
HeartPy-Master-Backup-20250913-204053/backups/pre-symlink-backup-20250913-203551/: heartpy_core.h
HeartPy-Master-Backup-20250913-204053/docs/: CLEAN_PPG_ARCHITECTURE.md  CLEAN_PPG_TASK_PROMPT.md  PPG_CODEX_PROMPT.md
HeartPy-Master-Backup-20250913-204053/docs/releases/: README.md  RELEASE_NOTES_TEMPLATE.md  release-notes-$VER.md
HeartPy-Master-Backup-20250913-204053/examples/: bench_poll_latency.cpp  bidmc_data.py  compare_cpp.cpp  compare_diff.py  compare_ekg.py  compare_with_python.py  example_main.cpp  realtime_demo.cpp  show_hp_analysis.py  smoke_test.cpp  sweep_params.py  validate_mitbih_rr.py  validate_rr_intervals.cpp  validate_vs_heartpy.py
HeartPy-Master-Backup-20250913-204053/old-src-backup/src/: App.tsx
HeartPy-Master-Backup-20250913-204053/old-src-backup/src/components/: PPGCamera.tsx  PPGDisplay.tsx
HeartPy-Master-Backup-20250913-204053/old-src-backup/src/core/: HeartPyWrapper.ts  PPGAnalyzer.ts  PPGConfig.ts  RingBuffer.ts
HeartPy-Master-Backup-20250913-204053/old-src-backup/src/types/: PPGTypes.ts
HeartPy-Master-Backup-20250913-204053/scripts/: check_status.sh  clean_duplicates.sh  organize_backups.sh  rollback.sh  safe_sync.sh  symlink_solution.sh
HeartPyApp/: App.tsx  CameraPPGAnalyzer.tsx  HeartPyRunner.tsx  README.md  TEST_CHECKLIST.md  TEST_SAMPLE_STREAM_FIX.md  babel.config.js  package-lock.json  package.json
HeartPyApp/.husky/: pre-push
HeartPyApp/android/: settings.gradle
HeartPyApp/android/app/: build.gradle
HeartPyApp/android/app/src/main/: AndroidManifest.xml
HeartPyApp/android/app/src/main/java/com/heartpyapp/: MainActivity.kt  MainApplication.kt
HeartPyApp/android/app/src/main/java/com/heartpyapp/ppg/: PPGMeanPlugin.kt
HeartPyApp/ios/: PPGCameraManager.h  PPGCameraManager.mm  PPGMeanPlugin.m  Podfile
HeartPyApp/ios/HeartPyApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
HeartPyApp/ios/HeartPyApp.xcodeproj/: project.pbxproj
HeartPyApp/ios/HeartPyApp.xcodeproj/xcshareddata/xcschemes/: HeartPyApp.xcscheme
HeartPyApp/scripts/: check_ppg_acceptance.js
HeartPyApp/scripts/__tests__/: check_ppg_acceptance.test.js
HeartPyApp/src/components/: PPGCamera.tsx  PPGDisplay.tsx
HeartPyApp/src/core/: HeartPyWrapper.ts  PPGAnalyzer.ts  PPGConfig.ts  RingBuffer.ts
HeartPyApp/src/types/: PPGTypes.ts
artifacts/: comprehensive_test.txt
cpp/: heartpy_core.cpp.backup  heartpy_core.h  heartpy_stream.cpp  heartpy_stream.h
docs/: CAMERAPPGANALYZER_CODE_REVIEW.md  MOBILE_QUICKSTART.md  PPG_ENHANCEMENT_PLAN.md  REACT_NATIVE_HEARTPY_DETAILED_ANALYSIS.md  REACT_NATIVE_MODULE_ANALYSIS.md  mobile_integration.md
examples/: bench_filter_psd.cpp  bench_poll_latency.cpp  benchmark_mitbih.py  compare_bidmc.py  compare_cpp.cpp  compare_cpp_json.cpp  compare_file_json.cpp  compare_rr_json.cpp  concurrency_smoke.cpp  example_main.cpp  generate_3min_and_compare.py  realtime_demo.cpp  run_mitbih_validation.py  show_hp_du.py  show_hp_pd.py  smoke_test.cpp  sweep_bidmc.py  sweep_parity.py  validate_mitbih_annotations.py  validate_mitbih_bidmc.py  validate_rr_intervals.cpp
react-native-heartpy/: README.md  package-lock.json  package.json  react-native.config.js  tsconfig.build.json
react-native-heartpy/__mocks__/: react-native.ts
react-native-heartpy/__tests__/: rt_errors.test.ts
react-native-heartpy/android/src/main/cpp/: CMakeLists.txt  native_analyze.cpp
react-native-heartpy/android/src/main/java/com/heartpy/: HeartPyModule.java
react-native-heartpy/archive/cpp-duplicates-20250912-164046/: README.md  heartpy_core.h
react-native-heartpy/cpp/: heartpy_core.cpp  heartpy_core.h  rn_options_builder.cpp  rn_options_builder.h
react-native-heartpy/ios/: HeartPy.podspec  HeartPyModule.h  HeartPyModule.mm  heartpy_core.cpp  heartpy_core.h  heartpy_stream.cpp  heartpy_stream.h  rn_options_builder.cpp  rn_options_builder.h
react-native-heartpy/src/: index.ts
scripts/: check_acceptance.py
